--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -29,6 +29,18 @@
     <string name="_30_minutes_before">일정 30분 전</string>
     <string name="_1_hour_before">일정 1시간 전</string>
     <string name="_1_day_before">일정 1일 전</string>
+    <string name="_10_minutes_before1">10분 전</string>
+    <string name="_30_minutes_before1">30분 전</string>
+    <string name="_1_hour_before1">1시간 전</string>
+    <string name="_1_day_before1">1일 전</string>
+    <string name="_30_minutes_after">일정 30분 후</string>
+    <string name="_10_minutes_after">일정 10분 후</string>
+    <string name="_1_hour_after">일정 1시간 후</string>
+    <string name="_1_day_after">일정 하루 후</string>
+    <string name="_30_minutes_after1">30분 후</string>
+    <string name="_10_minutes_after1">10분 후</string>
+    <string name="_1_hour_after1">1시간 후</string>
+    <string name="_1_day_after1">하루 후</string>
     <string name="custom">사용자 설정</string>
     <string name="everyday">매일</string>
     <string name="every_week">매주</string>
@@ -47,10 +59,6 @@
     <string name="stress_type">스트레스가 나에게 어떤 존재입니까?</string>
     <string name="self_intervention_hint">스트레스를 완화시킬 수 있는 자신만의  중재방법을 만들어보세요.</string>
     <string name="intervention_scheduling">중재 방안 시간 설정</string>
-    <string name="_30_minutes_after">일정 30분 후</string>
-    <string name="_10_minutes_after">일정 10분 후</string>
-    <string name="_1_hour_after">일정 1시간 후</string>
-    <string name="_1_day_after">일정 하루 후</string>
     <string name="event">일정</string>
     <string name="event_completion">일정을 완료하셨나요?</string>
     <string name="ask_stress_level">실제 일정이 주는 스트레스의 정도는?</string>
@@ -128,7 +136,8 @@
     <string name="text_image">Image of a letter</string>
     <string name="before_event">Before event</string>
     <string name="after_ecvent">After ecvent</string>
-    <string name="intervention_reminder_text">%1s에 알려줘</string>
+    <string name="intervention_reminder_text">%1$s 알림</string>
+    <string name="intervention_reminder_text1">종료 후 %1$s 알림</string>
     <string name="log_out">Log out</string>
     <string name="notifications_settings">Notifications settings</string>
     <string name="current_event_title">일정: %1$s</string>
