--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,11 +107,20 @@
     <string name="_1_hour_before">1 hour before</string>
     <string name="_30_minutes_before">30 minutes before</string>
     <string name="_10_minutes_before">10 minutes before</string>
+    <string name="_1_day_before1">1 day before</string>
+    <string name="_1_hour_before1">1 hour before</string>
+    <string name="_30_minutes_before1">30 minutes before</string>
+    <string name="_10_minutes_before1">10 minutes before</string>
     <string name="_10_minutes_after">10 minutes after</string>
     <string name="_30_minutes_after">30 minutes after</string>
     <string name="_1_hour_after">1 hour after</string>
     <string name="_1_day_after">1 day after</string>
+    <string name="_10_minutes_after1">10 minutes after</string>
+    <string name="_30_minutes_after1">30 minutes after</string>
+    <string name="_1_hour_after1">1 hour after</string>
+    <string name="_1_day_after1">1 day after</string>
     <string name="intervention_reminder_text">Remind me %1$s event</string>
+    <string name="intervention_reminder_text1">Remind me %1$s event</string>
     <string name="event_notification">Event notification:</string>
     <string name="log_out">Log out</string>
     <string name="notifications_settings">Notifications settings</string>
