--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,14 +201,13 @@
     <string name="survey2_scale4">거의 그렇다</string>
     <string name="survey2_scale5">매우 그렇다</string>
 
+    <string name="survey3_scale0">Strongly disagree</string>
+    <string name="survey3_scale1">Disagree</string>
+    <string name="survey3_scale2">Neutral</string>
+    <string name="survey3_scale3">Agree</string>
+    <string name="survey3_scale4">Strongly agree</string>
 
-    <string name="survey3_scale0">매우 아니다 </string>
-    <string name="survey3_scale1">보통이다</string>
-    <string name="survey3_scale2">매우 그렇다</string>
 
-    <string name="survey4_scale0">전혀 할 수 없다</string>
-    <string name="survey4_scale1">보통이다</string>
-    <string name="survey4_scale2">확실히 할 수 있다</string>
     <string name="intervention_effectiveness_txt">Intervention effectiveness</string>
     <string name="_0">0</string>
     <string name="_1">1</string>
